--- a/site/blueprints/pages/default.yml
+++ b/site/blueprints/pages/default.yml
@@ -44,6 +44,7 @@ tabs:
                 type: blocks
                 fieldsets:
                   - eventblock
+                  - scheduleblock
 
       right:
         width: 1/3
